# Q-VAULT-OS

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md  _boot_pipeline.py  build.py  deploy.sh  main.py  requirements.txt  run.py  run_full_audit.py  test_sandbox.py
apps/: __init__.py  core_app.py  file_explorer.py  file_explorer_engine.py  malicious_plugin_engine.py  marketplace_engine.py  network_engine.py  network_tools.py  security_engine.py  security_panel.py  settings_app.py  settings_engine.py  storage_view.py  task_manager.py  task_manager_engine.py  terminal.py  vault_tool.py
assets/: design_tokens.py  manifest.json  theme.py  wallpaper_data.py
binaries/: PQC-Vault.deps.json  PQC-Vault.runtimeconfig.json
components/: account_settings_dialog.py  ai_inspector.py  app_launcher.py  app_proxies.py  automation_brain_ui.py  boot_screen.py  command_palette.py  control_center.py  core_monitor_ui.py  debug_event_overlay.py  desktop.py  desktop_icon.py  diagnostic_overlay.py  endurance_tester.py  error_dialog.py  feedback_dialog.py  file_explorer_ui.py  first_run_wizard.py  focus_manager.py  lock_screen.py  login_screen.py  marketplace.py  modern_launcher.py  motion.py  network_menu.py  notification_container.py  notification_toast.py  onboarding_flow.py  os_window.py  physics_controller.py  quick_panel.py  security_dashboard.py  security_ui.py  settings_hub.py  settings_ui.py  snap_controller.py  snap_preview_overlay.py  sound_menu.py  splash_screen.py  start_menu.py  (+11 more)
core/: _path_resolver.py  (+9 more)
(+291 files in other folders)
