[package]
name = "qvault-core"
version = "0.1.0"
edition = "2021"
description = "Q-Vault OS - Rust security core"

[lib]
name = "qvault_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Cryptography
aes-gcm = "0.10"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
subtle = "2.5"


# Encoding
base64 = "0.22"

# UUID generation
uuid = { version = "1.7", features = ["v4"] }

# Data & Persistence
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

# Identity/Auth
argon2 = { version = "0.5", features = ["std", "password-hash"] }

# Key Derivation
hkdf = "0.12"

# Python bindings
# abi3 = builds once, runs on Python 3.11+ without recompiling per patch version
# abi3-py311 = minimum Python version for the stable ABI
[dependencies.pyo3]
version = "0.21"
features = ["extension-module", "abi3-py311"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

# maturin metadata — used when building with `maturin build` or `maturin develop`
[package.metadata.maturin]
python-source = "core/binaries"